--- a/k8s-manifest/flask-app62/service.yaml
+++ b/k8s-manifest/flask-app62/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flask-service
-  namespace: flask-app62
+  namespace: flask-day63
 spec:
   selector:
     app: flask
