--- a/k8s-manifest/mysql-db/deployment.yaml
+++ b/k8s-manifest/mysql-db/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql-deployment
-  namespace: mysql-db
+  namespace: mysql-day63
 spec:
   replicas: 2
   selector:
