--- a/k8s-manifest/mysql-db/service.yaml
+++ b/k8s-manifest/mysql-db/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
-  namespace: mysql-db
+  namespace: mysql-day63
 spec:
   selector:
     app: mysql
